design changes for the MVP award badges

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
                         <a href="https://www.instagram.com/nitinpanditofficial/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="mailto:donlynitin@outlook.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                     </div>
+                    <div class="mvp-badges">
+                        <a href="https://mvp.microsoft.com/en-US/MVP/profile/926f6a12-7933-e611-8129-c4346bac7bfc" target="_blank" rel="noopener noreferrer" class="mvp-badge">
+                            <img src="Photos/MVP/Microsoft_MVP.png" alt="Microsoft MVP" title="Microsoft MVP 2015-2025">
+                            <span class="mvp-years">10 Years</span>
+                        </a>
+                        <a href="https://www.c-sharpcorner.com/members/nitin-pandit" target="_blank" rel="noopener noreferrer" class="mvp-badge">
+                            <img src="Photos/MVP/CSharpCorner_MVP.png" alt="C# Corner MVP" title="C# Corner MVP 2014-2025">
+                            <span class="mvp-years">11+ Years</span>
+                        </a>
+                    </div>
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
