design changes for Article Section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#awards" class="nav-link">Awards</a></li>
                 <li><a href="#community" class="nav-link">Community</a></li>
+                <li><a href="#articles" class="nav-link">Articles</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <div class="nav-right">
@@ -453,6 +454,25 @@
         </div>
     </section>
 
+    <!-- Latest Articles Section -->
+    <section id="articles" class="articles">
+        <div class="container">
+            <h2 class="section-title">Latest Articles</h2>
+            <p class="section-subtitle">Recent blog posts and technical articles from C# Corner</p>
+            <div class="articles-grid" id="articlesGrid">
+                <div class="article-loading">
+                    <i class="fas fa-spinner fa-spin"></i>
+                    <p>Loading latest articles...</p>
+                </div>
+            </div>
+            <div class="articles-footer">
+                <a href="https://www.c-sharpcorner.com/members/nitin-pandit/articles" target="_blank" class="btn btn-primary">
+                    View All Articles <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
@@ -505,6 +525,11 @@
             </div>
         </div>
     </footer>
+
+    <!-- Scroll to Top Button -->
+    <button id="scrollToTop" class="scroll-to-top" aria-label="Scroll to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 
     <script src="script.js"></script>
 </body>
